Allow access for ClosureSerializer used by Spark KryoSerializer