@@ -108,13 +108,17 @@
         <distribution.format>dir</distribution.format>
         <spotbugs.plugin.version>4.7.2.0</spotbugs.plugin.version>
         <go-offline.plugin.version>1.2.8</go-offline.plugin.version>
-        <!-- java.nio.Buffer is accessed by Apache Arrow MemoryUtil, used for ingest -->
-        <!-- sun.io.ch.DirectBuffer is accessed by Apache Spark StorageUtils, used in the bulk import job runner -->
-        <!-- java.util.AbstractList is accessed by Apache Spark KryoSerializer, used in the bulk import job runner -->
+        <!--
+        java.nio.Buffer is accessed by Apache Arrow MemoryUtil, used for ingest.
+        sun.io.ch.DirectBuffer is accessed by Apache Spark StorageUtils, used in the bulk import job runner
+        java.util.AbstractList is accessed by Apache Spark KryoSerializer, used in the bulk import job runner
+        java.lang.invoke.SerializedLambda is accessed by Apache Spark KryoSerializer, used in the bulk import job runner
+        -->
         <module.access.args>
             --add-opens java.base/java.nio=ALL-UNNAMED
             --add-opens java.base/sun.nio.ch=ALL-UNNAMED
             --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.lang.invoke=ALL-UNNAMED
         </module.access.args>
         <!--  This is required for later correct replacement of argLine -->
         <argLine/>
